# Cookbook

./: .bazelignore  .bazeliskrc  .bazelrc  .gitignore  .gitmodules  BUILD  BUILD.bazel  Cookbook.tex  Makefile  README.md  Taskfile  WORKSPACE  WORKSPACE.bazel  conversions.py  cookbook.bzl  densities.py  formatting.sty  functions.lua  github-release-api.BUILD.bazel  github_release_api.patch  luamacros.sty  new.sh  packages.patch  recipe.sublime-snippet  release.sh  usetengwar.sty  volumes.py
Source/: BUILD  Cookbook.tex  Makefile  compile.bzl  ingredient.sublime-snippet  interactive.sh  new.sh  recipe.sublime-snippet  remove_untested.py
Source/entries/: Almond_chicken_and_rice.tex  ApplePie.tex  Apple_pie.tex  BLTs.tex  BakedMacAndCheese.tex  Baked_apples.tex  Baked_potatoes.tex  Baklava.tex  BananaBread.tex  Beef_pasties.tex  Beef_roast.tex  Beef_stew.tex  Berry_jam.tex  Biscuits.tex  Black_bean_dip.tex  Blueberry_tart.tex  Broccoli_cheese_soup.tex  Brown_butter_chocolate_chip_cookies.tex  Brussels_sprouts.tex  C4_cookies.tex  Chana_masala.tex  CheddarChiveCornbread.tex  CherryPie.tex  Cherry_pie.tex  ChocolateCake.tex  Chocolate_peanut_tartlets.tex  ChuckwagonCasserole.tex  Coconut_rice_pudding.tex  Corn_and_bean_salad.tex  Cornbread.tex  Cranberry_cake.tex  DinnerRolls.tex  Dinner_rolls.tex  Fried_rice.tex  Fruit_salad.tex  FudgyBrownies.tex  GingerBiscuits.tex  Gingerbread.tex  Goulash.tex  GreenBeansWithCream.tex  (+60 more)
entries/: AlmondChickenAndRice.tex  Apfelkuchen.tex  AppleDumplings.tex  ApplePie.tex  BLTs.tex  BUILD.bazel  BabyBackRibs.tex  BakedApples.tex  BakedMacAndCheese.tex  BakedPotatoes.tex  BakedRavioli.tex  Baklava.tex  BananaBread.tex  BananaChocolateMuffins.tex  BaseDessertBread.tex  BasicPastaDough.tex  BasilPesto.tex  BavarianAppleCake.tex  BeefRoast.tex  BeefStew.tex  BerryCrumble.tex  BerryJam.tex  BethsButterSugarCookies.tex  Biscuits.tex  BiscuitsAndGravy.tex  BlackBeanDip.tex  BlueberryMuffins.tex  BlueberryTart.tex  BlueberryWalnutMuffins.tex  BoiledApples.tex  BoiledEggs.tex  BranMuffins.tex  BroccoliCheeseSoup.tex  BrownButterChocolateChipCookies.tex  Brownies.tex  Bruschetta.tex  BrusselsSprouts.tex  Bulgogi.tex  ButtercreamFrosting.tex  CaramelizedOnionMushroomAndBeefCalzones.tex  (+147 more)
