load("@rules_python//python:defs.bzl", "py_binary")
load("//:cookbook.bzl", "cookbook")
load("@rules_pkg//:pkg.bzl", "pkg_tar")
load("@bazel_deploy//:deploy.bzl", "deploy")
load("@keys//:secrets.bzl", "SERVER_ID")

filegroup(
    name = "packages",
    srcs = [
        "@annatar",
        "@bazel_latex//packages:booktabs",
        "@bazel_latex//packages:cuisine",
        "@bazel_latex//packages:diagbox",
        "@bazel_latex//packages:etoolbox",
        "@bazel_latex//packages:fancyhdr",
        "@bazel_latex//packages:fontspec",
        "@bazel_latex//packages:geometry",
        "@bazel_latex//packages:hhline",
        "@bazel_latex//packages:hyperref",
        "@bazel_latex//packages:luacode",
        "@bazel_latex//packages:luatex85",
        "@bazel_latex//packages:nicefrac",
        "@bazel_latex//packages:siunitx",
        "@bazel_latex//packages:subfiles",
        "@bazel_latex//packages:substr",
        "@bazel_latex//packages:tabularx",
        "@bazel_latex//packages:tengwarscript",
        "@bazel_latex//packages:thumbs",
    ],
    visibility = ["//visibility:public"],
)

py_binary(
    name = "densities",
    srcs = ["densities.py"],
)

genrule(
    name = "density-table",
    outs = ["density-table.tex"],
    cmd = "$(location :densities) >$@",
    tools = [":densities"],
)

py_binary(
    name = "volumes",
    srcs = ["volumes.py"],
)

genrule(
    name = "volume-table",
    outs = ["volume-table.tex"],
    cmd = "$(location :volumes) >$@",
    tools = [":volumes"],
)

cookbook(
    name = "Cookbook",
)

cookbook(
    name = "Cookbook-Tested",
)

cookbook(
    name = "Cookbook-Digital",
)

sh_binary(
    name = "new",
    srcs = [":new.sh"],
)

exports_files(
    srcs = [
        "Cookbook.tex",
    ],
)

pkg_tar(
    name = "_editions",
    srcs = [
        ":Cookbook",
        ":Cookbook-Digital",
        ":Cookbook-Tested",
    ],
    visibility = ["//visibility:private"],
)

deploy(
    name = "publish",
    destination = "/var/www/files",
    host = "nthurmes.duckdns.org",
    key = SERVER_ID,
    tar = ":_editions",
    user = "server",
)
