load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive", "http_file")

http_archive(
    name = "bazel_latex",
    patches = ["//:packages.patch"],
    sha256 = "4af7e8bc134e8b24d5f4b01b06d150d096b1698bdcbd38683cd18ee01af39fa5",
    strip_prefix = "bazel-latex-1.1",
    url = "https://github.com/ProdriveTechnologies/bazel-latex/archive/v1.1.tar.gz",
)

load("@bazel_latex//:repositories.bzl", "latex_repositories")

latex_repositories()

http_file(
    name = "tengwar_quenya",
    sha256 = "e2b7b6ae14b12dbf717aed4b8d9a9b05b9e46fc6313b7d08bed39caaa019303c",
    urls = ["https://dl.dafont.com/dl/?f=tengwar_quenya"],
)

http_archive(
    name = "rules_python",
    sha256 = "954aa89b491be4a083304a2cb838019c8b8c3720a7abb9c4cb81ac7a24230cea",
    url = "https://github.com/bazelbuild/rules_python/releases/download/0.4.0/rules_python-0.4.0.tar.gz",
)

http_archive(
    name = "github_release_api",
    build_file = "//:github-release-api.BUILD.bazel",
    strip_prefix = "pgdurand-github-release-api-cd1c516",
    type = "tgz",
    sha256 = "e7095423f7879c7edf657158fd64094c8c1f20d81920d26a3aaa81880bb2ceae",
    url = "https://api.github.com/repos/pgdurand/github-release-api/tarball/cd1c51669be47a35c2446d1f774246df4e2e0549",
    patches= ["//:github_release_api.patch"]
)
