load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive", "http_file")

http_archive(
    name = "bazel_latex",
    patches = ["//:packages.patch"],
    sha256 = "4af7e8bc134e8b24d5f4b01b06d150d096b1698bdcbd38683cd18ee01af39fa5",
    strip_prefix = "bazel-latex-1.1",
    url = "https://github.com/ProdriveTechnologies/bazel-latex/archive/v1.1.tar.gz",
)

load("@bazel_latex//:repositories.bzl", "latex_repositories")

latex_repositories()

http_file(
    name = "tengwar_quenya",
    sha256 = "e2b7b6ae14b12dbf717aed4b8d9a9b05b9e46fc6313b7d08bed39caaa019303c",
    urls = ["https://dl.dafont.com/dl/?f=tengwar_quenya"],
)

http_archive(
    name = "rules_python",
    sha256 = "954aa89b491be4a083304a2cb838019c8b8c3720a7abb9c4cb81ac7a24230cea",
    url = "https://github.com/bazelbuild/rules_python/releases/download/0.4.0/rules_python-0.4.0.tar.gz",
)

http_archive(
    name = "github_release_api",
    build_file = "//:github-release-api.BUILD.bazel",
    patches = ["//:github_release_api.patch"],
    sha256 = "e7095423f7879c7edf657158fd64094c8c1f20d81920d26a3aaa81880bb2ceae",
    strip_prefix = "pgdurand-github-release-api-cd1c516",
    type = "tgz",
    url = "https://api.github.com/repos/pgdurand/github-release-api/tarball/cd1c51669be47a35c2446d1f774246df4e2e0549",
)

load("@bazel_tools//tools/build_defs/repo:git.bzl", "git_repository")

git_repository(
    name = "bazel_deploy",
    commit = "fcc2e7225544e5d7e9a91a8bd7711809e44dc610",
    remote = "git@nthurmes.duckdns.org:bazel_deploy.git",
    shallow_since = "1649312638 -0600",
)

http_archive(
    name = "bazel_secrets",
    patches = ["@bazel_deploy//:secrets.patch"],
    sha256 = "70dd93d91def7965176469ab3e6b9982775643b4409ccfd18d5e9a9ccbf25e92",
    strip_prefix = "solarhess-rules_build_secrets-103b222",
    type = "tgz",
    urls = [
        "https://api.github.com/repos/solarhess/rules_build_secrets/tarball/103b222eba64355b93649b06ecfe3844466b5a65",
    ],
)

load("@bazel_secrets//lib:secrets.bzl", "environment_secrets")

environment_secrets(
    name = "keys",
    entries = {
        "SERVER_ID": "<REQUIRED>",
    },
)

http_archive(
    name = "rules_pkg",
    sha256 = "a89e203d3cf264e564fcb96b6e06dd70bc0557356eb48400ce4b5d97c2c3720d",
    urls = [
        "https://mirror.bazel.build/github.com/bazelbuild/rules_pkg/releases/download/0.5.1/rules_pkg-0.5.1.tar.gz",
        "https://github.com/bazelbuild/rules_pkg/releases/download/0.5.1/rules_pkg-0.5.1.tar.gz",
    ],
)

load("@rules_pkg//:deps.bzl", "rules_pkg_dependencies")

rules_pkg_dependencies()
