load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_archive(
    name = "bazel_latex",
    patches = ["//:packages.patch"],
    sha256 = "4af7e8bc134e8b24d5f4b01b06d150d096b1698bdcbd38683cd18ee01af39fa5",
    strip_prefix = "bazel-latex-1.1",
    url = "https://github.com/ProdriveTechnologies/bazel-latex/archive/v1.1.tar.gz",
)

load("@bazel_latex//:repositories.bzl", "latex_repositories")

latex_repositories()

http_archive(
    name = "rules_python",
    sha256 = "954aa89b491be4a083304a2cb838019c8b8c3720a7abb9c4cb81ac7a24230cea",
    url = "https://github.com/bazelbuild/rules_python/releases/download/0.4.0/rules_python-0.4.0.tar.gz",
)

http_archive(
    name = "github_release_api",
    build_file = "//:github-release-api.BUILD.bazel",
    patches = ["//:github_release_api.patch"],
    sha256 = "e7095423f7879c7edf657158fd64094c8c1f20d81920d26a3aaa81880bb2ceae",
    strip_prefix = "pgdurand-github-release-api-cd1c516",
    type = "tgz",
    url = "https://api.github.com/repos/pgdurand/github-release-api/tarball/cd1c51669be47a35c2446d1f774246df4e2e0549",
)

load("@bazel_tools//tools/build_defs/repo:git.bzl", "git_repository")

git_repository(
    name = "bazel_deploy",
    commit = "721c359e742cc93623184ba31dc3f41a7a4d2fa7",
    remote = "git@nthurmes.duckdns.org:bazel_deploy.git",
    shallow_since = "1649483039 -0600",
)

load("@bazel_deploy//:deps.bzl", "deploy_dependencies")

deploy_dependencies()

load("@bazel_secrets//lib:secrets.bzl", "environment_secrets")

environment_secrets(
    name = "keys",
    entries = {
        "SERVER_ID": "<REQUIRED>",
    },
)

http_archive(
    name = "rules_pkg",
    sha256 = "a89e203d3cf264e564fcb96b6e06dd70bc0557356eb48400ce4b5d97c2c3720d",
    urls = [
        "https://mirror.bazel.build/github.com/bazelbuild/rules_pkg/releases/download/0.5.1/rules_pkg-0.5.1.tar.gz",
        "https://github.com/bazelbuild/rules_pkg/releases/download/0.5.1/rules_pkg-0.5.1.tar.gz",
    ],
)

load("@rules_pkg//:deps.bzl", "rules_pkg_dependencies")

rules_pkg_dependencies()

git_repository(
    name = "usetengwar",
    commit = "192e6b09add39a5cf0723af0debfe6619755277d",
    remote = "git@nthurmes.duckdns.org:tengwarscript.git",
    shallow_since = "1657869313 -0600",
)

load("@usetengwar//:deps.bzl", "tengwar_fonts")

tengwar_fonts("annatar")
