load("@bazel_latex//:latex.bzl", "latex_document")

filegroup(
    name = "recipes",
    srcs = glob(["entries/*.tex"]),
    visibility = ["//visibility:public"]
)

[
    latex_document(
        name = file.rsplit('.', 1)[0],
        main = file,
        srcs = [
            "//:packages",
            "//:Cookbook.tex",
        ]
    )
    for file in glob(["*.tex"])
]