load("@bazel_latex//:latex.bzl", "latex_document")

filegroup(
    name = "recipes",
    srcs = glob(["*.tex"]),
    visibility = ["//visibility:public"],
)

[
    latex_document(
        name = file.rsplit(".", 1)[0],
        srcs = [
            "//:Cookbook.tex",
            "//:packages",
        ],
        main = file,
    )
    for file in glob(["*.tex"])
]
